UI improvements and user registration, login, account settings implemented

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,9 @@ build/Release
 node_modules/
 jspm_packages/
 
+# NPM
+package-lock.json
+
 # TypeScript v1 declaration files
 typings/
 
@@ -63,5 +66,5 @@ typings/
 .next
 
 #WebStorm
-idea
+/idea
 
