--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "@angular/platform-browser": "^5.2.10",
     "@angular/platform-browser-dynamic": "^5.2.10",
     "@angular/router": "^5.2.10",
+    "@auth0/angular-jwt": "^1.2.0",
     "@ng-bootstrap/ng-bootstrap": "^1.1.2",
+    "@ngx-progressbar/core": "^4.3.0",
+    "@ngx-progressbar/http": "^5.0.1",
+    "@ngx-progressbar/router": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^4.1.0",
     "cookie-parser": "~1.4.3",
     "core-js": "^2.4.1",
@@ -24,8 +29,14 @@
     "font-awesome": "^4.7.0",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
+    "jsonwebtoken": "^8.2.1",
+    "mongoose": "^5.0.17",
+    "mongoose-unique-validator": "^2.0.1",
     "morgan": "~1.9.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "rxjs": "^5.5.6",
+    "validator": "^10.2.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -42,11 +53,12 @@
     "html-loader": "^0.5.5",
     "jasmine": "^3.1.0",
     "karma": "^2.0.2",
+    "nodemon": "^1.17.4",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.21.0",
     "to-string-loader": "^1.1.5",
     "ts-node": "^6.0.1",
-    "tslint": "^5.9.1",
+    "tslint": "^5.10.0",
     "typescript": "^2.8.3",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.15",
