--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "http-errors": "~1.6.2",
     "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.0.17",
+    "mongoose-beautiful-unique-validation": "^7.1.1",
     "mongoose-unique-validator": "^2.0.1",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
