--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@auth0/angular-jwt": "^1.2.0",
     "@ng-bootstrap/ng-bootstrap": "^1.1.2",
     "@ngx-progressbar/core": "^4.3.0",
-    "@ngx-progressbar/http": "^5.0.1",
-    "@ngx-progressbar/router": "^5.0.1",
+    "@ngx-progressbar/http": "^4.3.0",
+    "@ngx-progressbar/router": "^4.3.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.1.0",
     "cookie-parser": "~1.4.3",
@@ -34,6 +34,7 @@
     "mongoose-beautiful-unique-validation": "^7.1.1",
     "mongoose-unique-validator": "^2.0.1",
     "morgan": "~1.9.0",
+    "nodemailer": "^4.6.4",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "rxjs": "^5.5.6",
