--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mongoose-unique-validator": "^2.0.1",
     "morgan": "~1.9.0",
     "nodemailer": "^4.6.4",
+    "nodemailer-express-handlebars": "^3.0.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "rxjs": "^5.5.6",
