--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "html-loader": "^0.5.5",
     "jasmine": "^3.1.0",
     "karma": "^2.0.2",
+    "mocha": "^5.2.0",
     "nodemon": "^1.17.4",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.21.0",
