--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "build": "del-cli public/javascripts && webpack --config webpack.config.dev.js --progress --profile --watch"
+    "build": "del-cli public/javascripts && webpack --config webpack.config.dev.js --progress --profile --watch",
+    "build-prod": "del-cli dist && webpack -p --config webpack.config.prod.js --progress --mode production"
   },
   "dependencies": {
     "@angular/common": "^5.2.10",
     "@angular/compiler": "^5.2.10",
+    "@angular/compiler-cli": "^6.0.3",
     "@angular/core": "^5.2.10",
     "@angular/forms": "^5.2.10",
     "@angular/http": "^5.2.10",
@@ -43,6 +45,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/core": "^0.6.5",
     "@angular/cli": "^1.7.4",
     "@angular/language-service": "^5.2.10",
     "@types/node": "~6.0.60",
@@ -64,6 +67,7 @@
     "ts-node": "^6.0.1",
     "tslint": "^5.10.0",
     "typescript": "^2.8.3",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.15",
     "webpack-dev-server": "^3.1.3",
