--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "movies",
+  "name": "Theater",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -42,6 +42,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "rxjs": "^5.5.6",
+    "serve-favicon": "^2.5.0",
     "validator": "^10.2.0",
     "zone.js": "^0.8.26"
   },
